--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -19,7 +19,7 @@
 </p>
 @if (!Model.Any())
 {
-    <p>We don't have any customers yet.</p>
+    <p>We don't have any customerDtoDtos yet.</p>
 }
 else
 {
